# LaserTankVSCode

./: CMakeLists.txt  ConsoleApplication5.cpp  Makefile  README.md  bulletInteraction.cpp  extractMatrix.cpp  game.cpp  get-score.php  index.html  map.cpp  player.cpp  playerInteraction.cpp  pushNewMapToServer.cpp  send-score.php  sendToServer.cpp  sfmlWeb.cpp  test.cpp
Debug/: vc143.idb
Debug/LaserTank.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LaserTank.lastbuildstate
Release/: ConsoleApplication5.vcxproj.FileListAbsolute.txt  LaserTank.exe.recipe  LaserTank.iobj  LaserTank.ipdb
Release/LaserTank.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  LaserTank.lastbuildstate  LaserTank.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: bullet.h  bulletInteraction.h  destroyedTank.h  destructibleBlock.h  direction.h  exp.txt  extractMatrix.h  flag.h  game.h  loadSound.h  map.h  mirror1Tile.h  mirror2Tile.h  mirror3Tile.h  mirror4Tile.h  movableBlock.h  movesProcessor.h  player.h  playerInteraction.h  tank1.h  textures.h  tile.h  tileFactory.h  tileInWater.h  transportTrack.h  undestructableBlock.h  walkableGround.h  waterTile.h
include/mainMenu/: editor.h  editorButton.h  level.h  mainMenu.h  quit.h  resources.h  start.h
maps/: map1.tmx  map10.tmx  map11.tmx  map12.tmx  map13.tmx  map14.tmx  map15.tmx  map16.tmx  map17.tmx  map18.tmx  map19.tmx  map20.tmx  map21.tmx  map22.tmx  map23.tmx  map6.tmx  map7.tmx  map8.tmx  map9.tmx
src/: bulletInteraction.cpp  extractMatrix.cpp  game.cpp  loadSound.cpp  main.cpp  map.cpp  player.cpp  playerInteraction.cpp  pullFromLevelsFromServer.cpp  textures.cpp  tileFactory.cpp
tinyxml2/: explanation.txt
